[package]
name = "hochanh"
version = "0.1.0"
edition = "2021"
authors = ["Của bạn <email@example.com>"]
description = "Static Site Generator chuyên dụng cho các khóa học trực tuyến"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.11"
tera = "1.20"
walkdir = "2.5"
tiny_http = "0.12"
